kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  selector:
    app: frontend-learner-mgmt-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
