kubernetes/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-controller
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: backend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service: 
            name: backend-service
            port:
              number: 80
      - path: /api/v1/customers
        pathType: Prefix
        backend:
          service: 
            name: backend-service
            port:
              number: 80
      - path: /api/v1/customers/
        pathType: Prefix
        backend:
          service: 
            name: backend-service
            port:
              number: 80
      - path: /api/v1/auth/login
        pathType: Prefix
        backend:
          service: 
            name: backend-service
            port:
              number: 80      
  ingressClassName: nginx
